--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@
     padding-left: 20px;
     
 }
-
 #search{
     width: 100%;
     height: 100%;
@@ -26,7 +25,7 @@
 
 #nav2{
     background-color: rgb(245,245,245);
-    padding-top: 1%;
+    padding-top: 2%;
 }
 #navrow{
     padding-left: 15%;
@@ -36,8 +35,7 @@
     right: 10%;
 
 }
-.nav2{
-    
-    width: 100%;
-    background-color: black;
+#navbar2{
+    background-color: rgb(245,245,245);
+    padding-top: 2%;
 }
