--- a/main.css
+++ b/main.css
@@ -86,6 +86,19 @@ body {
     padding-top: 56px;
 }
 
+.movie-title {
+    background: none; 
+    color: inherit;   
+    font-size: 1.25rem; 
+}
+.movie-genre{
+     padding-left: 2%;
+}
+.row {
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 @media (max-width: 576px) {
     #navbar2 {
