--- a/main.css
+++ b/main.css
@@ -198,7 +198,10 @@ footer .btn-danger:hover {
     text-decoration: none;
     color: rgb(128, 124, 124);
 }
-
+#heading{
+    color: rgb(176, 174, 174);
+    font-size: 14px;
+} 
 #text1:hover{
     color: white;
 }
